# Backend-Dev-Assignment-Zippee-

./: Dockerfile  README.md  docker-compose.yml  gunicorn.sh  init_db.sh  main.py  pyproject.toml
app/: config.py  database.py  main.py
app/models/: task.py  user.py
app/rabc/: rabc_decorators.py
app/routes/: auth_routes.py  task_routes.py  user_routes.py
app/schemas/: auth_schema.py  task_schema.py  user_schema.py
app/services/: auth_service.py  task_service.py  user_service.py
